--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 	<title>SMD COMPILER</title>
 
 	<link rel="stylesheet" href="css/styles.css">
+
+
 </head>
 <body>
+	<div class="header">
+		  <video playsinline autoplay muted loop poster="cake.jpg">
+    <source src="background.mp4">
+	<source src="background.webm" type="video/webm"></source>
 
-	<div class="wrapper">
+    Your browser does not support the video tag.
+  </video>
 			<ul class="main-menu">
 				<li><a target="_blank" href="https://www.youtube.com/channel/UCgkPCLfQU1wxlFo8E8EhjxQ ">Youtube</a></li>
 				<li><a target="_blank" href="https://vk.com/underko">VK</a></li>
@@ -76,11 +83,7 @@
 			<br> SmdCompile - это визуальная обёртка Studiomdl.
 		</p>
 	</ul>>
-
 	</div>
-	
-	</div>
-	
 <script>
 	let slideIndex = 1;
 showSlides(slideIndex);
