--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 	<div class="header">
 		  <video playsinline autoplay muted loop poster="cake.jpg">
-    <source src="background.mp4">
-	<source src="background.webm" type="video/webm"></source>
+    <source src="img/background.mp4">
+	<source src="img/background.webm" type="video/webm"></source>
 
     Your browser does not support the video tag.
   </video>
